<resources>
    <string name="app_title">DroidPlanner</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="menu_drone_setup">Drone Setup</string>
    <string name="app_settings">App Settings</string>
    <string name="flight_data">Flight Data</string>
    <string name="editor">Editor</string>
    <string name="mission">Mission</string>
    <string name="send_mission">Send Mission</string>
    <string name="load_mission">Load Mission</string>
    <string name="mapbox_id">ne0fhyk.ighceofk</string>
    <string name="screen_tuning">Tuning</string>
    <string name="screen_cal">Calibration</string>
    <string name="screen_checklist">Checklist</string>
    <string name="screen_rc">Radio</string>
    <string name="screen_parameters">Parameters</string>
    <string name="pref_connection_type">Telemetry Connection Type</string>
    <string name="pref_connection_type_summary">Which link to use to connect to the drone</string>
    <string name="pref_maps_title">Maps</string>
    <string name="pref_maps_providers_summary">Which map provider to use.</string>
    <string name="pref_maps_providers_title">Maps Providers</string>
    <string name="pref_mavlink">MAVLink</string>
    <string name="pref_mavlink_rates">Stream Rates</string>
    <string name="pref_mavlink_rates_summary">Rate at which flight data should be received from the drone (in Hz)</string>
    <string name="pref_mavlink_stream_rate_ext_stat">Waypoints, GPS raw, fence data, current waypoint, etc</string>
    <string name="pref_mavlink_stream_rate_extra1">Attitude</string>
    <string name="pref_mavlink_stream_rate_extra2">VFR_Hud data</string>
    <string name="pref_mavlink_stream_rate_extra3">AHRS, Hardware Status, Wind</string>
    <string name="pref_mavlink_stream_rate_position">Position data</string>
    <string name="pref_mavlink_stream_rate_RC_override">RC Override</string>
    <string name="pref_mavlink_stream_rate_rc_channels">RC Channel Data</string>
    <string name="pref_mavlink_stream_rate_raw_sensors">Raw Sensors</string>
    <string name="pref_mavlink_stream_rate_raw_controller">Raw Controller</string>
    <string name="pref_ui">User Interface</string>
    <string name="pref_ui_language_english">English as UI Language</string>
    <string name="pref_ui_language_english_summary">Use English language (instead of system language). Requires app restart.</string>
    <string name="pref_connection_actions">While Connected to Drone</string>
    <string name="pref_connection_actions_summary">Actions to perform on or while connected to the Drone\nTo apply disconnect and reconnect</string>
    <string name="pref_keep_screen_bright">Keep Screen On</string>
    <string name="pref_keep_screen_bright_summary">Check to keep the screen on and bright (affect
        battery life)</string>
    <string name="pref_lock_screen_orientation">Lock Screen Orientation</string>
    <string name="pref_lock_screen_orientation_summary">Locks screen to the orientation which is present when connecting</string>
    <string name="pref_flight_data">Flight Data</string>
    <string name="pref_max_flight_path_size">Flight path size</string>
    <string name="pref_max_flight_path_size_summary">Size of the flight path, set to zero to disable.</string>
    <string name="pref_guided_mode_on_long_press">Guided Mode on long press</string>
    <string name="pref_guided_mode_on_long_press_summary">Enable entering the Guided Mode by long pressing the map.</string>
    <string name="pref_follow_me_mode_enabled">Enable FollowMe Mode</string>
    <string name="pref_follow_me_mode_enabled_summary">In development</string>
    <string name="pref_heading_mode">Enable FPV heading mode</string>
    <string name="pref_heading_mode_summary">Change heading mode to FPV (-180º to 180º)</string>
    <string name="pref_pebble">PEBBLE</string>
    <string name="pref_pebble_install_watchapp">Update Pebble</string>
    <string name="pref_advanced">Advanced</string>
    <string name="pref_advanced_use_offline_maps">Use offline maps</string>
    <string name="pref_advanced_use_offline_maps_summary">Use map tiles on the local storage, for offline map view</string>
    <string name="pref_map_type">Map Type</string>
    <string name="pref_map_type_default">Satellite</string>
    <string name="pref_map_type_summary">Which type of map to use</string>
    <string name="pref_enable_tts">Enable Speech output</string>
    <string name="pref_enable_tts_summary">Audible messages for important events</string>
    <string name="pref_request_max_volume">Set Volume To Max On Start</string>
    <string name="pref_vehicle_type">Default Vehicle Type</string>
    <string name="pref_vehicle_type_summary">Default vehicle type when disconnected</string>
    <string name="pref_rc">RC Screen</string>
    <string name="pref_rc_general">General</string>
    <string name="pref_rc_mode">RC Mode</string>
    <string name="pref_rc_mode_summary">Throttle on left or right stick</string>
    <string name="pref_rc_quickmode_left">QuickMode Left</string>
    <string name="pref_rc_quickmode_right">QuickMode Right</string>
    <string name="pref_rc_reverse">Reverse</string>
    <string name="pref_rc_throttle">Throttle</string>
    <string name="pref_rc_throttle_reverse_summary">Reverses Throttle direction</string>
    <string name="pref_rc_throttle_returntocenter">Return to Center</string>
    <string name="pref_rc_throttle_returntocenter_summary">On touch release Throttle returns to center</string>
    <string name="pref_rc_rudder">Rudder</string>
    <string name="pref_rc_rudder_reverse_summary">Reverses Rudder/Yaw direction</string>
    <string name="pref_rc_aileron">Aileron</string>
    <string name="pref_rc_aileron_reverse_summary">Reverses Aileron/Roll direction</string>
    <string name="pref_rc_elevator">Elevator</string>
    <string name="pref_rc_elevator_reverse_summary">Reverses Elevator/Pitch direction</string>
    <string name="pref_connection">Connection Preferences</string>
    <string name="pref_usb">USB Connection</string>
    <string name="pref_baud_type">Telemetry link speed</string>
    <string name="pref_baud_type_summary">Baud Rate of the USB Telemetry Link</string>
    <string name="pref_server">TCP connection</string>
    <string name="pref_server_ip">Server IP</string>
    <string name="pref_server_port">Server Port</string>
    <string name="pref_server_udp">UDP connection</string>
    <string name="pref_udp_server_port">UDP Server Port</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="storage_folder">Storage Folder</string>
    <string name="pref_live_upload">Enable live upload (ALPHA TEST)</string>
    <string name="pref_live_upload_summary">Live vehicle monitoring on Droneshare</string>
    <string name="user_autopan_long_press">Long press to activate user auto panning.</string>
    <string name="drone_autopan_long_press">Long press to activate drone auto panning.</string>
    <string name="drone_no_location">No drone location available</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="button_setup_calibrate">Calibrate</string>
    <string name="button_setup_cancel">Cancel</string>
    <string name="button_setup_send">Send</string>
    <string name="button_setup_next">Next</string>
    <string name="button_setup_reset">Reset</string>
    <string name="button_setup_done">Done</string>
    <string name="Pause">Pause</string>
    <string name="dialog_box_btn_txt_ok">OK</string>
    <string name="select_file_to_open">Select file to open:</string>
    <string name="no_files">No files</string>
    <string name="error_when_opening_file">Error when opening file</string>
    <string name="status_file_opened">File opened</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="write">Write</string>
    <string name="refresh">Refresh</string>
    <string name="distance_between_lines">Lateral</string>
    <string name="footprint">Footprint</string>
    <string name="ground_resolution">GSD</string>
    <string name="distance_between_pictures">Longitudinal</string>
    <string name="area">Area</string>
    <string name="camera_">Camera:</string>
    <string name="inner_wps">Inner WPs</string>
    <string name="hatch_angle">Hatch angle:</string>
    <string name="flight_altitude">Flight Altitude:</string>
    <string name="overlap">Overlap:</string>
    <string name="sidelap">Sidelap:</string>
    <string name="mission_length">Grid Length</string>
    <string name="pictures">Pictures</string>
    <string name="number_of_strips">Number of Strips</string>
    <string name="exception_draw_polygon">Draw a polygon/WPTs</string>
    <string name="exception_draw_2_more_polygon_points">Draw at least 2 more polygon points</string>
    <string name="exception_draw_1_more_polygon_points">Draw at least 1 more polygon point</string>
    <string name="draw_the_survey_region">Draw the survey region</string>
    <string name="mission_is_too_lengthy">Mission is too lengthy</string>
    <string name="mode_acro">Acro allows a pilot to control rate of rotation directly.</string>
    <string name="mode_althold">Alt Hold automatically controls throttle and maintains altitude. Does not require GPS.</string>
    <string name="mode_auto">Auto follows the scripted mission stored on the vehicle.</string>
    <string name="mode_circle">Circle rotates the vehicle around a point of interest. The vehicle will always point toward the center. Requires GPS lock.</string>
    <string name="mode_drift">Drift combines roll and yaw to produce a more natural and intuitive flight. Requires GPS lock.</string>
    <string name="mode_guided">Guided enables position control from a ground station. Requires GPS lock.</string>
    <string name="mode_land">Land at the current location. Requires GPS lock.</string>
    <string name="mode_loiter">Loiter allows the pilot to fly completely through GPS.</string>
    <string name="mode_ofloiter">Optical Flow enabled Loiter holds position and altitude assisted by the required optical flow sensors.</string>
    <string name="mode_position">Position allows the pilot to fly completely through GPS, but with manual throttle control.</string>
    <string name="mode_rtl">RTL rises to the minimum altitude, returns to the home location and lands. Requires GPS lock.</string>
    <string name="mode_sport">Sport allows a pilot to control rate of rotation directly with the addition of self-leveling.</string>
    <string name="mode_stabilize">Stabilize levels the vehicle in flight.</string>
    <string name="mode_poshold">PosHold allows position hold (GPS) with direct response to pilot input.</string>
    <string name="waypointType_Waypoint">Waypoint</string>
    <string name="waypointType_SplineWaypoint">Spline Waypoint</string>
    <string name="waypointType_TakeOff">Takeoff</string>
    <string name="waypointType_RTL">Return To Launch</string>
    <string name="waypointType_Land">Land</string>
    <string name="waypointType_Change_Speed">Change Speed</string>
    <string name="waypointType_Condition_Yaw">Set Yaw</string>
    <string name="mission_control_home">Home</string>
    <string name="mission_control_arm">Arm</string>
    <string name="mission_control_disarm">Disarm</string>
    <string name="mission_control_land">Land</string>
    <string name="mission_control_takeoff">Takeoff</string>
    <string name="mission_control_pause">Pause</string>
    <string name="mission_control_auto">Auto</string>
    <string name="mission_control_follow">Follow</string>
    <string name="mission_control_dronie">Dronie</string>
    <string name="menu_info_bar">Info Bar</string>
    <string name="menu_drone_selection">Select Drone</string>
</resources>