<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_connect"
        android:showAsAction="never"
        android:title="@string/menu_disconnect"/>

    <item
        android:id="@+id/menu_popup_drone"
        android:showAsAction="never"
        android:title="@string/menu_drone_selection"
        />

    <item
        android:id="@+id/menu_info_bar"
        android:title="@string/menu_info_bar"
        android:showAsAction="ifRoom"
        android:actionProviderClass="org.droidplanner.android.widgets.actionProviders.InfoBarActionProvider"
        />

    <item
        android:id="@+id/menu_multiple"
        android:showAsAction="never"
        android:title="Multiple"/>

<group
    android:id="@+id/menu_group_connected"
    android:enabled="false"
    android:visible="false">

    <item
        android:id="@+id/menu_send_mission"
        android:showAsAction="never"
        android:orderInCategory="1"
        android:title="@string/send_mission"/>
    <item
        android:id="@+id/menu_load_mission"
        android:showAsAction="never"
        android:orderInCategory="2"
        android:title="@string/load_mission"/>

</group>


</menu>
